--- a/gulp/config.json
+++ b/gulp/config.json
@@ -1,6 +1,7 @@
 {
   "paths": {
     "public": "public/",
+    "subappAssets": "app/views/apps/",
     "assets" : "app/assets/",
     "docsAssets" : "docs/assets/",
     "v6Assets": "app/v6/assets/",
